DMP-3024: Fix collapsing gutters on smaller displays (#1287)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ $govuk-suppressed-warnings: ('govuk-typography-scale-14');
 .govuk-width-container,
 .moj-header__container,
 .moj-primary-navigation__container {
-  max-width: 1280px;
+  @include govuk-width-container(1280px);
 }
 
 .moj-header__navigation-link {
